Refactor User class validation and add Lombok annotation.