@@ -1,26 +1,30 @@
 package school.faang.registration;
 
-import java.util.HashSet;
+import lombok.Getter;
+import lombok.ToString;
+
 import java.util.Set;
 
+@Getter
+@ToString
 public class User {
     private String name;
     private int age;
     private String job;
     private String address;
 
-    private static final int ABS_AGE = 18;
+    private static final int MIN_AGE = 18;
     private static final Set<String> VALID_JOBS = Set.of("Google", "Uber", "Amazon");
     private static final Set<String> VALID_ADDRESSES = Set.of("London", "New York", "Amsterdam");
 
     public User(String name, int age, String job, String address) {
 
-        if (name == null || name.trim().isEmpty()) {
-            throw new IllegalArgumentException("Имя не может быть null");
+        if (name == null || name.trim().isBlank()) {
+            throw new IllegalArgumentException("Имя не может быть пустым");
         }
 
-        if (age < ABS_AGE) {
-            throw new IllegalArgumentException("Возраст не может быть < 18");
+        if (age < MIN_AGE) {
+            throw new IllegalArgumentException("Возраст не может быть меньше " + MIN_AGE);
         }
 
         if (!VALID_JOBS.contains(job)) {
@@ -35,27 +39,5 @@ public class User {
         this.age = age;
         this.job = job;
         this.address = address;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public int getAge() {
-        return age;
-    }
-
-    public String getJob() {
-        return job;
-    }
-
-    public String getAddress() {
-        return address;
-    }
-
-    @Override
-    public String toString() {
-        return "User {имя: " + name + ", возраст: " + age +
-                ", место работы: " + job + ", город: " + address + "}";
     }
 }
